# opencl_mm

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindAAL.cmake  FindAOCL.cmake  FindMCP.cmake
src/: main.cpp  matrix_mult.cl  opencl.cpp
